<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Let's highlight resourses from differrent classes by comments -->


    <!-- App -->
    <string name="app_name">Let\'s Watch!</string>
    <string name="hello_world">Hello world!</string>
    <string name="content_description">poster image</string>
    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_search">Search</string>
	<string name="menu_refresh">Refresh</string>

    <!-- MainActivity -->

	<!-- Drawer items -->
	<string name="drawer_movies">Movies</string>
	<string name="drawer_people">People</string>
	<string name="drawer_user">User space</string>
	<string name="drawer_discover">Discover</string>
	
	<string name="drawer_theaters">Theaters</string>
	<string name="drawer_dvd">Dvd</string>
	<string name="drawer_favorites">Favorites</string>
	<string name="drawer_popular">Popular</string>

	<string-array name="titles_drawer">
	    <item >@string/drawer_movies</item>
	    <item >@string/drawer_people</item>
	    <item >@string/drawer_user</item>
	    <item >@string/drawer_discover</item>
	</string-array>
	
	<string name="now_playing">Now playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top rated</string>
    <string name="upcoming">Upcoming</string>
    
    <string-array name="titles_search_drawer">
	    <item >@string/search_drawer_movies</item>
	    <item >@string/search_drawer_person</item>
	    <item >@string/search_drawer_tv</item>
	</string-array>
	
    <string name="search_drawer_movies">Movies</string>
    <string name="search_drawer_person">Person</string>
    <string name="search_drawer_tv">Tv</string>
    
    <string-array name="movie_sections">
        <item >@string/now_playing</item>
        <item >@string/popular</item>
        <item >@string/top_rated</item>
        <item >@string/upcoming</item>
    </string-array>
	
    <!-- Page titles -->
    <string name="title_box_office">box office</string>
    <string name="title_upcoming">upcoming</string>
    <string name="title_theaters">in theaters</string>
    <string name="title_opening">opening</string>

    <string-array name="titles_theater">
        <item>@string/title_box_office</item>
        <item>@string/title_upcoming</item>
        <item>@string/title_theaters</item>
        <item>@string/title_opening</item>
    </string-array>

    <string name="title_top_rentals">top rentals</string>
    <string name="title_current_releases">current releases</string>
    <string name="title_new_releases">new releases</string>
    <string name="title_upcoming_dvd">upcoming</string>

    <string-array name="titles_dvd">
        <item>@string/title_top_rentals</item>
        <item>@string/title_new_releases</item>
        <item>@string/title_current_releases</item>
        <item>@string/title_opening</item>
    </string-array>
    
    <!-- MovieDetailsActivity -->
    <string name="title_info">info</string>

    <!-- InfoFragment -->
    <string name="year_info_movie_details">year</string>
    <string name="runtime_info_movie_details">runtime</string>
    <string name="mpaa_info_movie_details">mpaa</string>
    <string name="critics_info_movie_details">critics</string>
    <string name="audience_info_movie_details">audience</string>
    <string name="description_info_movie_details">Threre is no movie description (:</string>

    <!-- App constants and keys -->
    <string name="internet_connection_is_not_avalible">Internet connection is not avalible</string>
    <string name="pagination">pagination</string>
    <string name="data">data</string>
    <string name="na">n/a</string>

    <!-- Adapters layout -->
    <string name="cast">Cast</string>

    <!-- Search -->
    <string name="search_label">LETS_WATCH_SEARCH_LABEL</string>
    <string name="search_hint">Search movie...</string>
    <string name="storyline">Storyline</string>
    <string name="similar">Similar</string>
    <string name="crew">Crew</string>
    <string name="search_hint_people">Search people</string>
    <string name="search_hint_movie">Search movie</string>
    
	<!-- Preferences -->
	<string name="prefs_paging_name">com.sickfuture.letswatch.paging</string>
	<string name="prefs_paging_now_playing_curr_page_count_key">now_pl_curr_key</string>
	<string name="prefs_paging_now_playing_max_page_count_key">now_pl_max_key</string>
	<string name="prefs_paging_upcom_curr_page_count_key">upcom_curr_key</string>
	<string name="prefs_paging_upcom_max_page_count_key">upcom_max_key</string>
	<string name="prefs_paging_top_rat_curr_page_count_key">top_rat_curr_key</string>
	<string name="prefs_paging_top_rat_max_page_count_key">top_rat_max_key</string>
	<string name="prefs_paging_pop_curr_page_count_key">pop_curr_key</string>
	<string name="prefs_paging_pop_max_page_count_key">pop_max_key</string>
	<string name="search_for">Search for</string>
	<string name="release_year">Release year</string>
	<string name="any">Any</string>
	
    
</resources>