<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true" >

        <RelativeLayout
            android:id="@+id/container_fragment_movie_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <com.android.sickfuture.sickcore.image.view.RecyclingImageView
                android:id="@+id/image_view_fragment_movie_backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:background="@color/AliceBlue"
                android:paddingBottom="8dp"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/text_view_fragment_movie_tagline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:background="@drawable/background_gradient_dark_from_top"
                android:gravity="center_horizontal|top"
                android:minHeight="48dp"
                android:padding="8dp"
                android:text="@string/app_name"
                android:textColor="@color/LightGrey"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_fragment_movie_top"
            android:background="@color/LightGrey"
            android:padding="8dp" >

            <com.android.sickfuture.sickcore.image.view.RecyclingImageView
                android:id="@+id/image_view_fragment_movie_poster"
                style="@style/styleImageViewPosterOnMainScreen"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="16dp"
                android:background="@color/AliceBlue" />

            <TextView
                android:id="@+id/text_view_fragment_movie_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image_view_fragment_movie_poster"
                android:layout_toRightOf="@id/image_view_fragment_movie_poster"
                android:text="@string/app_name" />

            <LinearLayout
                android:id="@+id/layout_fragment_movie_info_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_view_fragment_movie_year"
                android:layout_toRightOf="@id/image_view_fragment_movie_poster"
                android:animateLayoutChanges="true"
                android:orientation="vertical" >
            </LinearLayout>

            <ImageView
                android:id="@+id/image_view_certification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/layout_fragment_movie_info_container"
                android:layout_toRightOf="@id/image_view_fragment_movie_poster"
                android:src="@drawable/ic_rate_pg" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_fragment_movie_storyline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/RelativeLayout1"
            android:layout_marginTop="16dp"
            android:background="@color/LightGrey"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                style="@style/styleSectionTitle"
                android:text="@string/storyline" />

            <TextView
                android:id="@+id/text_view_fragment_movie_storyline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/description_info_movie_details" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fragment_movie_casts"
            style="@style/styleSelectableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fragment_movie_storyline"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"
            android:visibility="gone" >

            <TextView
                style="@style/styleSectionTitle"
                android:layout_marginLeft="8dp"
                android:text="@string/cast" />

            <it.sephiroth.android.library.widget.HListView
                android:id="@+id/hlist_view_fragment_movie_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fragment_movie_crew"
            style="@style/styleSelectableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fragment_movie_casts"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="4dp"
            android:visibility="gone" >

            <TextView
                style="@style/styleSectionTitle"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/crew" />

            <it.sephiroth.android.library.widget.HListView
                android:id="@+id/hlist_view_fragment_movie_crew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fragment_movie_production_creds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fragment_movie_crew"
            android:layout_marginTop="16dp"
            android:background="@color/LightGrey"
            android:orientation="vertical"
            android:padding="8dp"
            android:visibility="gone" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fragment_movie_similar"
            style="@style/styleSelectableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fragment_movie_production_creds"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="gone" >

            <TextView
                style="@style/styleSectionTitle"
                android:layout_marginLeft="8dp"
                android:text="@string/similar" />

            <it.sephiroth.android.library.widget.HListView
                android:id="@+id/hlist_view_fragment_movie_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>